Fix horizontal scrollbar issue

--- a/web/css/main.css
+++ b/web/css/main.css
@@ -165,6 +165,11 @@ a {
     -webkit-align-items: start;
 }
 
+.video {
+    width: 100%;
+    overflow:hidden;
+}
+
 .main {
     -webkit-flex: 1;
 }
